--- a/index.html
+++ b/index.html
@@ -867,8 +867,8 @@ document.addEventListener('DOMContentLoaded', function () {
     <div class="container-xxl py-6">
         <div class="container">
             <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="position-relative overflow-hidden ps-5 pt-5 h-100" style="min-height: 400px;">
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="position-relative overflow-hidden pe-5 pt-5 h-100" style="min-height: 400px;">
                         <img class="position-absolute w-100 h-100" src="img/about-1.jpg" alt="" style="object-fit: cover;">
                         
                     </div>
@@ -1265,5 +1265,6 @@ document.addEventListener('DOMContentLoaded', function () {
 
 
 </html>
+
 
 
