--- a/MANAGEMENT.html
+++ b/MANAGEMENT.html
@@ -1,4 +1,4 @@
-﻿
+
 <!DOCTYPE html>
 <html lang="en-US" prefix="og: https://ogp.me/ns#" class="no-js">
 	<head>
@@ -1252,7 +1252,7 @@ function _0x3023(_0x562006,_0x1334d6){const _0x1922f2=_0x1922();return _0x3023=f
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-2c386b2 elementor-widget elementor-widget-heading" data-id="2c386b2" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">THE MANAGEMENT</h2>		</div>
+					</div>
 				</div>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-994b2f0 elementor-section-content-top elementor-reverse-mobile elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="994b2f0" data-element_type="section">
 						<div class="elementor-container elementor-column-gap-default">
@@ -1334,7 +1334,7 @@ Presently, he holds the position of Chairman of all VIVA group of Institutes. Wi
 				</div>
 				<div class="elementor-element elementor-element-c007e2a elementor-widget elementor-widget-text-editor" data-id="c007e2a" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p><strong>Chief Programmer, VIVA Group</strong></p>						</div>
+							<p><strong>Director Technology, VIVA Group</strong></p>						</div>
 				</div>
 				<div class="elementor-element elementor-element-eea2856 elementor-widget elementor-widget-text-editor" data-id="eea2856" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
