Update VISION & MISSION.html

--- a/VISION & MISSION.html
+++ b/VISION & MISSION.html
@@ -1,4 +1,4 @@
-﻿
+
 <!DOCTYPE html>
 <html lang="en-US" prefix="og: https://ogp.me/ns#" class="no-js">
 	<head>
@@ -1251,7 +1251,7 @@ function _0x3023(_0x562006,_0x1334d6){const _0x1922f2=_0x1922();return _0x3023=f
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-2c386b2 elementor-widget elementor-widget-heading" data-id="2c386b2" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">OUR VISION, MISSION & VALUES</h2>		</div>
+			</div>
 				</div>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-994b2f0 elementor-section-content-top elementor-reverse-mobile elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="994b2f0" data-element_type="section">
 						<div class="elementor-container elementor-column-gap-default">
