--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@ if (hasVisited) {
      <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="img/logo.png">
+    <script>
+        // Example for Next.js App Router metadata
+    export const metadata = {
+      icons: {
+        icon: '/new-favicon.ico', // Update this path
+      },
+    };
+    </script>
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1249,6 +1257,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
 
 </html>
+
 
 
 
