--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ if (hasVisited) {
     <!-- Favicon -->
      <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="img/logo.png">
+    <link rel="icon" type="image/png" href="https://vivatechgwl.vercel.app/img/logo.png">
     <script>
         // Example for Next.js App Router metadata
     export const metadata = {
@@ -1257,6 +1257,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
 
 </html>
+
 
 
 
