--- a/index.html
+++ b/index.html
@@ -99,15 +99,8 @@ if (hasVisited) {
     <!-- Favicon -->
      <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="https://vivatechgwl.vercel.app/img/logo.png">
-    <script>
-        // Example for Next.js App Router metadata
-    export const metadata = {
-      icons: {
-        icon: '/new-favicon.ico', // Update this path
-      },
-    };
-    </script>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+   
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1257,6 +1250,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
 
 </html>
+
 
 
 
