--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ if (hasVisited) {
 <head>
     <meta charset="utf-8">
     <title>Viva Technologies</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -1250,6 +1251,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
 
 </html>
+
 
 
 
