--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<head>
+<meta charset="utf-8">
+    <title>Viva Technologies</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
 <body>
 <div id="splash">
     <video id="splashVideo" autoplay muted playsinline>
@@ -1251,6 +1255,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
 
 </html>
+
 
 
 
