--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
+<head>
+    <meta charset="utf-8">
     <title>Viva Technologies</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
 </head>
 <body>
 <div id="splash">
@@ -1255,6 +1259,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
 
 </html>
+
 
 
 
