--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@ document.addEventListener('DOMContentLoaded', function () {
     <!-- Features End -->
 
 
-    <!-- Team Start -->
+   <!-- Team Start -->
     <div class="container-xxl py-6">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
@@ -1061,8 +1061,8 @@ document.addEventListener('DOMContentLoaded', function () {
                             </div>
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h5 class="mt-2">Full Name</h5>
-                            <span>Trainer</span>
+                            <h3 class="mt-2">Mayank</h3>
+                            <span></span>
                         </div>
                     </div>
                 </div>
@@ -1077,8 +1077,8 @@ document.addEventListener('DOMContentLoaded', function () {
                             </div>
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h5 class="mt-2">Full Name</h5>
-                            <span>Trainer</span>
+                            <h3 class="mt-2">Vaibhav</h3>
+                            <span></span>
                         </div>
                     </div>
                 </div>
@@ -1093,8 +1093,8 @@ document.addEventListener('DOMContentLoaded', function () {
                             </div>
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h5 class="mt-2">Full Name</h5>
-                            <span>Trainer</span>
+                            <h3 class="mt-2">Ritvik</h3>
+                            <span></span>
                         </div>
                     </div>
                 </div>
@@ -1109,8 +1109,8 @@ document.addEventListener('DOMContentLoaded', function () {
                             </div>
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h5 class="mt-2">Full Name</h5>
-                            <span>Trainer</span>
+                            <h3 class="mt-2">Vansh</h3>
+                            <span></span>
                         </div>
                     </div>
                 </div>
@@ -1259,6 +1259,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
 
 </html>
+
 
 
 
